syntax = "proto3";

package file_store; 

option go_package = "/;file_store";


service FileTransfer{
    rpc SendFile(stream FileData) returns (FileResponse); 
}

message FileData{
    bool eof=1; 
    bytes chunk =2; 
    string fileName = 3; 
}

message FileResponse{
    bool success =1; 
    string message =2; 
}